--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=SpringWebSecurityProgetto
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/SpringWebSecurityGestioneEventi
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# ===============================
+# = SPRING SECURITY
+# ===============================
+#jwt.secret=1c4ef5b64994a5cf48e7f4efdceb2f6a
+#jwt.expiration=864000000
